[project]
name = "agio-drive"
version = "0.0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"agio_drive" = [
    "__agio__.yml",
    "resources/**",
]